# Omgevingsbeleid-DSO

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
dso/: __init__.py  cmds.py  exceptions.py  models.py
dso/act_builder/: builder.py  builder_service.py
dso/announcement_builder/: builder.py
dso/builder/: builder.py
input/01-2-initial-gebiedsaanwijzing/: main.json  policy_objects.json
input/01-hello-world/: main.json
input/01-initial/: Scenario.md  expected_results.json  expected_results.yml  main.json  policy_objects.json  regelingvrijetekst_template.xml  werkingsgebieden.json
input/01-initial-load-mockdata/: Scenario.md
input/01-initial-visie/: Scenario.md  main.json  policy_objects.json  regelingvrijetekst_template.xml  werkingsgebieden.json
input/02-1-mutation/: Scenario.md  main.json  policy_objects.json  updated_owdata_schema.json  werkingsgebieden.json
input/02-1-wijziging-visie-full/: main.json  policy_objects.json  was_regelingvrijetekst.xml  werkingsgebieden.json
input/02-2-ow-terminate-scenarios /: Scenario.md  main.json  regelingvrijetekst_template.xml  was_regelingvrijetekst.xml
input/02-2-wijziging-geen-ow/: main.json
input/02-3-wijziging-gebiedsaanwijzing/: Scenario.md  main.json  policy_objects.json
input/02-mutation/: Scenario.md  expected_results.yml  main.json  policy_objects.json  regelingvrijetekst_template.xml  werkingsgebieden.json
input/02-wijziging-visie/: regelingvrijetekst_template.xml  was_regelingvrijetekst.xml
input/03-add-gba/: Scenario.md  expected_results.yml  gebiedsaanwijzingen.json  gios.json  hoofdlijnen.json  main.json  policy_objects.json  werkingsgebieden.json
input/04-add-ow-thema-hoofdlijn/: Scenario.md  assets.json  expected_results.yml  main.json  policy_objects.json  regelingvrijetekst_template.xml  werkingsgebieden.json
tests/: conftest.py  factory.py
tests/fixtures/: mock_xml_pre_annotation_ref.xml  mock_xml_pre_ewid_service.xml  policy-objects-example.json  vrijetekst-simple-ambtsgebied.xml  vrijetekst-simple-gba.xml  werkingsgebied-example.json
tests/functional/: base.py  test_file_output.py  test_file_ow_divisies.py  test_file_ow_gebiedsaanwijzingen.py  test_file_ow_locaties.py  test_file_ow_state.py  test_output_files.py  test_ow_state.py  test_ow_state_annotation_map.py  test_ow_state_divisions.py  test_ow_state_locations.py  test_package_files_output.py
tests/integration/: test_annotation_service.py  test_ewid_service.py  test_ow_builder_divisie.py  (+3 more)
(+420 files in other folders)
