[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dso"
dynamic = ["version"]
requires-python = ">=3.13"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"] # unused-import: Which is oke for __init__.py files

[tool.pytest.ini_options]
norecursedirs = "*venv* *.venv* *.pytest_cache*"
testpaths = ["tests"]
addopts = "-s"

